--- a/Bib.bib
+++ b/Bib.bib
@@ -430,3 +430,24 @@ doi={10.1109/LWC.2016.2598777}}
   year={2010},
   organization={IEEE}
 }
+
+@article{jose2011channel,
+  title={Channel estimation and linear precoding in multiuser multiple-antenna TDD systems},
+  author={Jose, Jubin and Ashikhmin, Alexei and Whiting, Phil and Vishwanath, Sriram},
+  journal={IEEE Transactions on Vehicular Technology},
+  volume={60},
+  number={5},
+  pages={2102--2116},
+  year={2011},
+  publisher={IEEE}
+}
+
+@article{zetterberg2011experimental,
+  title={Experimental investigation of TDD reciprocity-based zero-forcing transmit precoding},
+  author={Zetterberg, Per},
+  journal={EURASIP Journal on Advances in Signal Processing},
+  volume={2011},
+  pages={1--10},
+  year={2011},
+  publisher={Springer}
+}
